lib/fplusParser.js
"use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = void 0;
var _antlr = _interopRequireDefault(require("antlr4"));
var _fplusListener = _interopRequireDefault(require("./fplusListener.js"));
var _fplusVisitor = _interopRequireDefault(require("./fplusVisitor.js"));
function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }
// Generated from fplus.g4 by ANTLR 4.13.1
// jshint ignore: start

const atn = new _antlr.default.atn.ATNDeserializer().deserialize(serializedATN);
const decisionsToDFA = atn.decisionToState.map((ds, index) => new _antlr.default.dfa.DFA(ds, index));
const sharedContextCache = new _antlr.default.atn.PredictionContextCache();
class fplusParser extends _antlr.default.Parser {
  static grammarFileName = "fplus.g4";
  static literalNames = [null, "'='", "'*'", "'/'", "'+'", "'-'", "'^'", null, null, null, null, null, null, "'print'", "'function'", "'loadstring'", "'end'", "'if'", "'then'", "'else'", "'elseif'", "'while'", "'do'", "'local'", "'let'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'.'", "':'", "','", "';'"];
  static symbolicNames = [null, null, null, null, null, null, null, "COMMENT", "MLCOMMENT", "STRING", "INTEGER", "FLOAT", "BOOLEAN", "PRINT", "FUNCTION", "LOADSTRING", "END", "IF", "THEN", "ELSE", "ELSEIF", "WHILE", "DO", "LOCAL", "LET", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LSQUARE", "RSQUARE", "DOT", "COLON", "COMMA", "SEMICOLON", "ID", "INLINE_JS_EXPR", "JAVASCRIPT_EMBED", "WS"];
  static ruleNames = ["program", "statement", "printExpr", "functionDeclaration", "anonymousFunctionDeclaration", "params", "objectDeclaration", "variableDeclaration", "localVariableDeclaration", "keyValuePair", "exprList", "expr", "functionCall", "objectAccess", "arrayAccess", "variableAccess", "parens", "loadstring", "arrayExpr", "objectExpr", "inlineJsExpr", "javaScriptEmbed", "ifStatement", "whileStatement", "elseIfStatement", "elseStatement"];
  constructor(input) {
    super(input);
    this._interp = new _antlr.default.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = fplusParser.ruleNames;
    this.literalNames = fplusParser.literalNames;
    this.symbolicNames = fplusParser.symbolicNames;
  }
  sempred(localctx, ruleIndex, predIndex) {
    switch (ruleIndex) {
      case 11:
        return this.expr_sempred(localctx, predIndex);
      default:
        throw "No predicate with index:" + ruleIndex;
    }
  }
  expr_sempred(localctx, predIndex) {
    switch (predIndex) {
      case 0:
        return this.precpred(this._ctx, 11);
      default:
        throw "No predicate with index:" + predIndex;
    }
  }
  program() {
    let localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, fplusParser.RULE_program);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 55;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while ((_la - 9 & ~0x1f) === 0 && (1 << _la - 9 & 470110591) !== 0) {
        this.state = 52;
        this.statement();
        this.state = 57;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
      this.state = 58;
      this.match(fplusParser.EOF);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  statement() {
    let localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, fplusParser.RULE_statement);
    try {
      this.state = 69;
      this._errHandler.sync(this);
      var la_ = this._interp.adaptivePredict(this._input, 1, this._ctx);
      switch (la_) {
        case 1:
          this.enterOuterAlt(localctx, 1);
          this.state = 60;
          this.printExpr();
          break;
        case 2:
          this.enterOuterAlt(localctx, 2);
          this.state = 61;
          this.functionDeclaration();
          break;
        case 3:
          this.enterOuterAlt(localctx, 3);
          this.state = 62;
          this.anonymousFunctionDeclaration();
          break;
        case 4:
          this.enterOuterAlt(localctx, 4);
          this.state = 63;
          this.objectDeclaration();
          break;
        case 5:
          this.enterOuterAlt(localctx, 5);
          this.state = 64;
          this.variableDeclaration();
          break;
        case 6:
          this.enterOuterAlt(localctx, 6);
          this.state = 65;
          this.localVariableDeclaration();
          break;
        case 7:
          this.enterOuterAlt(localctx, 7);
          this.state = 66;
          this.expr(0);
          break;
        case 8:
          this.enterOuterAlt(localctx, 8);
          this.state = 67;
          this.ifStatement();
          break;
        case 9:
          this.enterOuterAlt(localctx, 9);
          this.state = 68;
          this.whileStatement();
          break;
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  printExpr() {
    let localctx = new PrintExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, fplusParser.RULE_printExpr);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 71;
      this.match(fplusParser.PRINT);
      this.state = 72;
      this.match(fplusParser.LPAREN);
      this.state = 74;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if ((_la - 9 & ~0x1f) === 0 && (1 << _la - 9 & 470089839) !== 0) {
        this.state = 73;
        this.exprList();
      }
      this.state = 76;
      this.match(fplusParser.RPAREN);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  functionDeclaration() {
    let localctx = new FunctionDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, fplusParser.RULE_functionDeclaration);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 79;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === 23) {
        this.state = 78;
        this.match(fplusParser.LOCAL);
      }
      this.state = 81;
      this.match(fplusParser.FUNCTION);
      this.state = 82;
      this.match(fplusParser.ID);
      this.state = 83;
      this.match(fplusParser.LPAREN);
      this.state = 85;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === 35) {
        this.state = 84;
        this.params();
      }
      this.state = 87;
      this.match(fplusParser.RPAREN);
      this.state = 91;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while ((_la - 9 & ~0x1f) === 0 && (1 << _la - 9 & 470110591) !== 0) {
        this.state = 88;
        this.statement();
        this.state = 93;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
      this.state = 94;
      this.match(fplusParser.END);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  anonymousFunctionDeclaration() {
    let localctx = new AnonymousFunctionDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, fplusParser.RULE_anonymousFunctionDeclaration);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 96;
      this.match(fplusParser.FUNCTION);
      this.state = 97;
      this.match(fplusParser.LPAREN);
      this.state = 99;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === 35) {
        this.state = 98;
        this.params();
      }
      this.state = 101;
      this.match(fplusParser.RPAREN);
      this.state = 105;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while ((_la - 9 & ~0x1f) === 0 && (1 << _la - 9 & 470110591) !== 0) {
        this.state = 102;
        this.statement();
        this.state = 107;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
      this.state = 108;
      this.match(fplusParser.END);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  params() {
    let localctx = new ParamsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, fplusParser.RULE_params);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 110;
      this.match(fplusParser.ID);
      this.state = 115;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while (_la === 33) {
        this.state = 111;
        this.match(fplusParser.COMMA);
        this.state = 112;
        this.match(fplusParser.ID);
        this.state = 117;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  objectDeclaration() {
    let localctx = new ObjectDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, fplusParser.RULE_objectDeclaration);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 118;
      this.match(fplusParser.LBRACE);
      this.state = 127;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === 35) {
        this.state = 119;
        this.keyValuePair();
        this.state = 124;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === 33) {
          this.state = 120;
          this.match(fplusParser.COMMA);
          this.state = 121;
          this.keyValuePair();
          this.state = 126;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
      }
      this.state = 129;
      this.match(fplusParser.RBRACE);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  variableDeclaration() {
    let localctx = new VariableDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, fplusParser.RULE_variableDeclaration);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 131;
      this.match(fplusParser.ID);
      this.state = 132;
      this.match(fplusParser.T__0);
      this.state = 133;
      this.expr(0);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  localVariableDeclaration() {
    let localctx = new LocalVariableDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, fplusParser.RULE_localVariableDeclaration);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 135;
      this.match(fplusParser.LOCAL);
      this.state = 136;
      this.match(fplusParser.ID);
      this.state = 137;
      this.match(fplusParser.T__0);
      this.state = 138;
      this.expr(0);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  keyValuePair() {
    let localctx = new KeyValuePairContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, fplusParser.RULE_keyValuePair);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 140;
      this.match(fplusParser.ID);
      this.state = 141;
      this.match(fplusParser.T__0);
      this.state = 142;
      this.expr(0);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  exprList() {
    let localctx = new ExprListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, fplusParser.RULE_exprList);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 144;
      this.expr(0);
      this.state = 149;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while (_la === 33) {
        this.state = 145;
        this.match(fplusParser.COMMA);
        this.state = 146;
        this.expr(0);
        this.state = 151;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  expr(_p) {
    if (_p === undefined) {
      _p = 0;
    }
    const _parentctx = this._ctx;
    const _parentState = this.state;
    let localctx = new ExprContext(this, this._ctx, _parentState);
    let _prevctx = localctx;
    const _startState = 22;
    this.enterRecursionRule(localctx, 22, fplusParser.RULE_expr, _p);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 167;
      this._errHandler.sync(this);
      var la_ = this._interp.adaptivePredict(this._input, 12, this._ctx);
      switch (la_) {
        case 1:
          this.state = 153;
          this.match(fplusParser.STRING);
          break;
        case 2:
          this.state = 154;
          this.match(fplusParser.INTEGER);
          break;
        case 3:
          this.state = 155;
          this.match(fplusParser.FLOAT);
          break;
        case 4:
          this.state = 156;
          this.match(fplusParser.BOOLEAN);
          break;
        case 5:
          this.state = 157;
          this.loadstring();
          break;
        case 6:
          this.state = 158;
          this.arrayExpr();
          break;
        case 7:
          this.state = 159;
          this.objectExpr();
          break;
        case 8:
          this.state = 160;
          this.functionCall();
          break;
        case 9:
          this.state = 161;
          this.objectAccess();
          break;
        case 10:
          this.state = 162;
          this.arrayAccess();
          break;
        case 11:
          this.state = 163;
          this.variableAccess();
          break;
        case 12:
          this.state = 164;
          this.parens();
          break;
        case 13:
          this.state = 165;
          this.inlineJsExpr();
          break;
        case 14:
          this.state = 166;
          this.javaScriptEmbed();
          break;
      }
      this._ctx.stop = this._input.LT(-1);
      this.state = 174;
      this._errHandler.sync(this);
      var _alt = this._interp.adaptivePredict(this._input, 13, this._ctx);
      while (_alt != 2 && _alt != _antlr.default.atn.ATN.INVALID_ALT_NUMBER) {
        if (_alt === 1) {
          if (this._parseListeners !== null) {
            this.triggerExitRuleEvent();
          }
          _prevctx = localctx;
          localctx = new ExprContext(this, _parentctx, _parentState);
          this.pushNewRecursionContext(localctx, _startState, fplusParser.RULE_expr);
          this.state = 169;
          if (!this.precpred(this._ctx, 11)) {
            throw new _antlr.default.error.FailedPredicateException(this, "this.precpred(this._ctx, 11)");
          }
          this.state = 170;
          _la = this._input.LA(1);
          if (!((_la & ~0x1f) === 0 && (1 << _la & 124) !== 0)) {
            this._errHandler.recoverInline(this);
          } else {
            this._errHandler.reportMatch(this);
            this.consume();
          }
          this.state = 171;
          this.expr(12);
        }
        this.state = 176;
        this._errHandler.sync(this);
        _alt = this._interp.adaptivePredict(this._input, 13, this._ctx);
      }
    } catch (error) {
      if (error instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = error;
        this._errHandler.reportError(this, error);
        this._errHandler.recover(this, error);
      } else {
        throw error;
      }
    } finally {
      this.unrollRecursionContexts(_parentctx);
    }
    return localctx;
  }
  functionCall() {
    let localctx = new FunctionCallContext(this, this._ctx, this.state);
    this.enterRule(localctx, 24, fplusParser.RULE_functionCall);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 180;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 35:
          this.state = 177;
          this.match(fplusParser.ID);
          break;
        case 14:
          this.state = 178;
          this.anonymousFunctionDeclaration();
          break;
        case 15:
          this.state = 179;
          this.loadstring();
          break;
        default:
          throw new _antlr.default.error.NoViableAltException(this);
      }
      this.state = 182;
      this.match(fplusParser.LPAREN);
      this.state = 184;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if ((_la - 9 & ~0x1f) === 0 && (1 << _la - 9 & 470089839) !== 0) {
        this.state = 183;
        this.exprList();
      }
      this.state = 186;
      this.match(fplusParser.RPAREN);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  objectAccess() {
    let localctx = new ObjectAccessContext(this, this._ctx, this.state);
    this.enterRule(localctx, 26, fplusParser.RULE_objectAccess);
    try {
      this.state = 198;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 35:
          this.enterOuterAlt(localctx, 1);
          this.state = 188;
          this.match(fplusParser.ID);
          break;
        case 27:
          this.enterOuterAlt(localctx, 2);
          this.state = 189;
          this.objectDeclaration();
          this.state = 196;
          this._errHandler.sync(this);
          switch (this._input.LA(1)) {
            case 31:
              this.state = 190;
              this.match(fplusParser.DOT);
              this.state = 191;
              this.match(fplusParser.ID);
              break;
            case 29:
              this.state = 192;
              this.match(fplusParser.LSQUARE);
              this.state = 193;
              this.expr(0);
              this.state = 194;
              this.match(fplusParser.RSQUARE);
              break;
            default:
              throw new _antlr.default.error.NoViableAltException(this);
          }
          break;
        default:
          throw new _antlr.default.error.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  arrayAccess() {
    let localctx = new ArrayAccessContext(this, this._ctx, this.state);
    this.enterRule(localctx, 28, fplusParser.RULE_arrayAccess);
    try {
      this.state = 206;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case 35:
          this.enterOuterAlt(localctx, 1);
          this.state = 200;
          this.match(fplusParser.ID);
          break;
        case 27:
          this.enterOuterAlt(localctx, 2);
          this.state = 201;
          this.arrayExpr();
          this.state = 202;
          this.match(fplusParser.LSQUARE);
          this.state = 203;
          this.match(fplusParser.INTEGER);
          this.state = 204;
          this.match(fplusParser.RSQUARE);
          break;
        default:
          throw new _antlr.default.error.NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  variableAccess() {
    let localctx = new VariableAccessContext(this, this._ctx, this.state);
    this.enterRule(localctx, 30, fplusParser.RULE_variableAccess);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 208;
      this.match(fplusParser.ID);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  parens() {
    let localctx = new ParensContext(this, this._ctx, this.state);
    this.enterRule(localctx, 32, fplusParser.RULE_parens);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 210;
      this.match(fplusParser.LPAREN);
      this.state = 211;
      this.expr(0);
      this.state = 212;
      this.match(fplusParser.RPAREN);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  loadstring() {
    let localctx = new LoadstringContext(this, this._ctx, this.state);
    this.enterRule(localctx, 34, fplusParser.RULE_loadstring);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 214;
      this.match(fplusParser.LOADSTRING);
      this.state = 215;
      this.match(fplusParser.LPAREN);
      this.state = 216;
      this.expr(0);
      this.state = 217;
      this.match(fplusParser.RPAREN);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  arrayExpr() {
    let localctx = new ArrayExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 36, fplusParser.RULE_arrayExpr);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 219;
      this.match(fplusParser.LBRACE);
      this.state = 221;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if ((_la - 9 & ~0x1f) === 0 && (1 << _la - 9 & 470089839) !== 0) {
        this.state = 220;
        this.exprList();
      }
      this.state = 223;
      this.match(fplusParser.RBRACE);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  objectExpr() {
    let localctx = new ObjectExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 38, fplusParser.RULE_objectExpr);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 225;
      this.match(fplusParser.LBRACE);
      this.state = 234;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === 35) {
        this.state = 226;
        this.keyValuePair();
        this.state = 231;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === 33) {
          this.state = 227;
          this.match(fplusParser.COMMA);
          this.state = 228;
          this.keyValuePair();
          this.state = 233;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
      }
      this.state = 236;
      this.match(fplusParser.RBRACE);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  inlineJsExpr() {
    let localctx = new InlineJsExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 40, fplusParser.RULE_inlineJsExpr);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 238;
      this.match(fplusParser.INLINE_JS_EXPR);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  javaScriptEmbed() {
    let localctx = new JavaScriptEmbedContext(this, this._ctx, this.state);
    this.enterRule(localctx, 42, fplusParser.RULE_javaScriptEmbed);
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 240;
      this.match(fplusParser.JAVASCRIPT_EMBED);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  ifStatement() {
    let localctx = new IfStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 44, fplusParser.RULE_ifStatement);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 242;
      this.match(fplusParser.IF);
      this.state = 243;
      this.expr(0);
      this.state = 244;
      this.match(fplusParser.THEN);
      this.state = 248;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while ((_la - 9 & ~0x1f) === 0 && (1 << _la - 9 & 470110591) !== 0) {
        this.state = 245;
        this.statement();
        this.state = 250;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
      this.state = 252;
      this._errHandler.sync(this);
      var la_ = this._interp.adaptivePredict(this._input, 23, this._ctx);
      if (la_ === 1) {
        this.state = 251;
        this.match(fplusParser.END);
      }
      this.state = 260;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while (_la === 20) {
        this.state = 254;
        this.elseIfStatement();
        this.state = 256;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input, 24, this._ctx);
        if (la_ === 1) {
          this.state = 255;
          this.match(fplusParser.END);
        }
        this.state = 262;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
      this.state = 267;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      if (_la === 19) {
        this.state = 263;
        this.elseStatement();
        this.state = 265;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input, 26, this._ctx);
        if (la_ === 1) {
          this.state = 264;
          this.match(fplusParser.END);
        }
      }
      this.state = 269;
      this.match(fplusParser.END);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  whileStatement() {
    let localctx = new WhileStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 46, fplusParser.RULE_whileStatement);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 271;
      this.match(fplusParser.WHILE);
      this.state = 272;
      this.expr(0);
      this.state = 273;
      this.match(fplusParser.DO);
      this.state = 277;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while ((_la - 9 & ~0x1f) === 0 && (1 << _la - 9 & 470110591) !== 0) {
        this.state = 274;
        this.statement();
        this.state = 279;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
      this.state = 280;
      this.match(fplusParser.END);
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  elseIfStatement() {
    let localctx = new ElseIfStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 48, fplusParser.RULE_elseIfStatement);
    var _la = 0;
    try {
      this.enterOuterAlt(localctx, 1);
      this.state = 282;
      this.match(fplusParser.ELSEIF);
      this.state = 283;
      this.expr(0);
      this.state = 284;
      this.match(fplusParser.THEN);
      this.state = 288;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
      while ((_la - 9 & ~0x1f) === 0 && (1 << _la - 9 & 470110591) !== 0) {
        this.state = 285;
        this.statement();
        this.state = 290;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
      }
    } catch (re) {
      if (re instanceof _antlr.default.error.RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
